# xiaochen-Agent

./: .gitignore  .voidrules  Dockerfile  README.md  build_exe.bat  build_linux.sh  build_linux_docker.sh  config.json  create_test_img.py  create_test_img_v2.py  launcher.py  requirements.txt  run.bat  test_copy_function.py  test_doubao.py  test_general_search.py  test_visit_page.py  xiaochen_terminal.spec
.trae/documents/: Refactor v2_1.py to Implement Void Logic.md
Test/: t.txt  test.py
backend_service/: requirements.txt
backend_service/api/: run.py  server.py
backend_service/configs/: config.json
backend_service/core/: __init__.py  engine.py
backend_service/docs/: API_GUIDE.txt  API_SERVER_GUIDE.md  README.md  SERVER_README.md
backend_service/ocr_core/: API_GUIDE.txt  (+9 more)
cpp_projects/: CMakeLists.txt  README.md  hello_world.cpp  如何运行.txt
doc/: 说明文档.md
python_snake_game/: README.md  requirements.txt  run_game.bat  run_game.sh  snake_game.py
snake_game/: README.md  index.html
test_io_operations/: test_edit_functionality.py  test_functionality.py  test_xiaochen_functionality.py
tests/: test_logs_sliding_window.py  test_simple_ids.py
webpage/: README.md  index.html
xiaochen_agent_v2/: .gitignore  .python_path  QUICKSTART.md  README.md  __init__.py  __main__.py  agent.bat  agent.py  agent.sh  cli.py  config.json  config.json.example  console.py  files.py  install.bat  install.sh  logs.py  ocr_config.json  ocr_config.json.example  requirements.txt  requirements_optional.txt  run.py  session.py  set_env.bat  set_env_simple.bat  setup.py  tags.py
(+86 files in other folders)
